# ta1-magnet-integration-example

./: README.md  pyproject.toml
jhu_ta1/algorithms/: dkps_instance_predictor.py
jhu_ta1/cards/: jhu_instance_predict_auc.yaml
